Correct capitalisation of Show and Hide

--- a/static/index.html
+++ b/static/index.html
@@ -52,14 +52,14 @@
 
         $('#enable-heat-map').click(() => {
             enableHeatMap = !enableHeatMap;
-            $('#enable-heat-map').text(enableHeatMap ? 'hide heatmap' : 'show heatmap');
+            $('#enable-heat-map').text(enableHeatMap ? 'Hide heatmap' : 'Show heatmap');
             refresh();
             genInterval();
         });
 
         $('#enable-markers').click(() => {
             enableMarkers = !enableMarkers;
-            $('#enable-markers').text(enableMarkers ? 'hide markers' : 'show markers');
+            $('#enable-markers').text(enableMarkers ? 'Hide markers' : 'Show markers');
             refresh();
             genInterval();
         });
